Fixes card zoom view layout on mobile device resolution

--- a/web/static/css/custom.css
+++ b/web/static/css/custom.css
@@ -59,10 +59,22 @@ main {
 	margin-bottom: 20px;
 }
 
-.collection-page #view_box {
-	position: absolute;
-	top: 10%;
-	left: 25%;
+@media only screen and (max-width: 600px) {
+	.collection-page #view_box {
+		position: absolute;
+		top: 10%;
+		max-width: 100%;
+		top: auto !important;
+		height: auto !important;
+	}	
+}
+
+@media only screen and (min-width: 601px) {
+	.collection-page #view_box {
+		position: absolute;
+		top: 10%;
+		left: 25%;
+	}
 }
 
 .collection-page .sort-head {
